// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`errors-page template > renders the errors page with client and server errors 1`] = `
"---
title: Errors
description: SDK error codes reference
---

## Example

\`\`\`typescript
import { SDK_CLIENT_ERROR_CODES, SDK_SERVER_ERROR_CODES } from "@qvac/sdk";

try {
  await loadModel({ modelSrc: "/path/to/model.gguf", modelType: "llm" });
} catch (error) {
  if (error.code === SDK_SERVER_ERROR_CODES.MODEL_LOAD_FAILED) {
    // handle model load failure
  }
}
\`\`\`

## Client errors

Thrown on the client side (response validation, RPC, provider). Access via \`SDK_CLIENT_ERROR_CODES.{ERROR_NAME}\`.

| Error | Code | Summary |
| --- | --- | --- |
| \`INVALID_RESPONSE_TYPE\` | 50001 | Invalid response type received. |
| \`RPC_CONNECTION_FAILED\` | 50203 | RPC connection failed. |

## Server errors

Thrown by the server (model operations, downloads, cache, RAG). Access via \`SDK_SERVER_ERROR_CODES.{ERROR_NAME}\`.

| Error | Code | Summary |
| --- | --- | --- |
| \`MODEL_NOT_FOUND\` | 52002 | Model ID not found in the registry. |
| \`DOWNLOAD_CANCELLED\` | 53001 | Download cancelled. |
"
`;

exports[`errors-page template > renders with only client errors 1`] = `
"---
title: Errors
description: SDK error codes reference
---

## Example

\`\`\`typescript
import { SDK_CLIENT_ERROR_CODES, SDK_SERVER_ERROR_CODES } from "@qvac/sdk";

try {
  await loadModel({ modelSrc: "/path/to/model.gguf", modelType: "llm" });
} catch (error) {
  if (error.code === SDK_SERVER_ERROR_CODES.MODEL_LOAD_FAILED) {
    // handle model load failure
  }
}
\`\`\`

## Client errors

Thrown on the client side (response validation, RPC, provider). Access via \`SDK_CLIENT_ERROR_CODES.{ERROR_NAME}\`.

| Error | Code | Summary |
| --- | --- | --- |
| \`INVALID_RESPONSE_TYPE\` | 50001 | Invalid response type received. |
| \`RPC_CONNECTION_FAILED\` | 50203 | RPC connection failed. |
"
`;

exports[`function-page template > renders a full function with all sections 1`] = `
"---
title: "completion( )"
titleStyle: code
description: "Generates completion from a language model. Returns streamed tokens."
---

<Callout type="warn" title="Deprecated">
Use completionV2() instead.
</Callout>

\`\`\`typescript
function completion(params: CompletionParams): CompletionResult
\`\`\`

## Parameters

| Name | Type | Required? | Description |
| --- | --- | :---: | --- |
| \`params\` | [\`CompletionParams\`](#completionparams) | ✓ | The completion parameters |

### \`CompletionParams\`

| Field | Type | Required? | Description |
| --- | --- | :---: | --- |
| \`modelId\` | \`string\` | ✓ | The model identifier |
| \`history\` | \`HistoryMessage[]\` | ✓ | Array of messages |
| \`stream\` | \`boolean\` | ✗ | Whether to stream tokens |

#### \`HistoryMessage\`

| Field | Type | Required? | Description |
| --- | --- | :---: | --- |
| \`role\` | \`string\` | ✓ | Message role |
| \`content\` | \`string\` | ✓ | Message content |

## Returns

\`\`\`typescript
CompletionResult
\`\`\`

The completion result object.

| Field | Type | Description |
| --- | --- | --- |
| \`text\` | \`Promise<string>\` | Complete generated text |
| \`stats\` | \`CompletionStats \\| —\` | Performance statistics |

### \`CompletionStats\`

| Field | Type | Required? | Description |
| --- | --- | :---: | --- |
| \`tokensPerSecond\` | \`number\` | ✓ | Tokens per second |

## Throws

| Error | When |
| --- | --- |
| \`INVALID_TOOLS_ARRAY\` | Invalid tools array provided |
| \`COMPLETION_FAILED\` | Completion failed |

## Example

\`\`\`typescript
const result = completion({ modelId: "llama-2", history: [{ role: "user", content: "Hello" }] });
\`\`\`"
`;

exports[`function-page template > renders a minimal function (no optional sections) 1`] = `
"---
title: "ping( )"
titleStyle: code
description: "Sends a ping request to the server."
---

\`\`\`typescript
function ping(): Promise<{ type: "pong"; number: number }>
\`\`\`



## Returns

\`\`\`typescript
Promise<{ type: "pong"; number: number }>
\`\`\`

The pong response."
`;

exports[`index-page template > renders the index page 1`] = `
"---
title: "@qvac/sdk"
titleStyle: code
description: API reference — v0.8.0
---

## Overview

\`@qvac/sdk\` npm package exposes a function-centric, typed JS API.

## Functions

| Function | Summary | Signature |
| --- | --- | --- |
| [\`completion()\`](./completion) | Generates completion from a language model. | \`completion(params: CompletionParams): CompletionResult\` |
| [\`ping()\`](./ping) | Sends a ping request to the server. | \`ping(): Promise<{ type: "pong"; number: number }>\` |

## Errors

See [Errors](./errors) for the full list of SDK error codes.
"
`;

exports[`renderExpandedTypes > renders a flat expanded type 1`] = `
"### \`Options\`

| Field | Type | Required? | Description |
| --- | --- | :---: | --- |
| \`timeout\` | \`number\` | ✓ | Timeout in ms |
| \`retries\` | \`number\` | ✗ | — |"
`;

exports[`renderExpandedTypes > renders nested expanded types 1`] = `
"### \`Outer\`

| Field | Type | Required? | Description |
| --- | --- | :---: | --- |
| \`inner\` | \`Inner\` | ✓ | Nested |

#### \`Inner\`

| Field | Type | Required? | Description |
| --- | --- | :---: | --- |
| \`value\` | \`string\` | ✓ | The value |"
`;
